feat: add Java 25 boundary rule evidence