@@ -22,6 +22,34 @@ class MavenProjectInspectorTest {
     }
 
     @Test
+    void extractsVisibleCompilerArgsFromMavenCompilerPlugin() {
+        var fixturePath = Path.of("src", "test", "resources", "fixtures", "maven-java21-preview");
+
+        var metadata = new MavenProjectInspector().inspect(fixturePath);
+
+        assertThat(metadata.declaredJavaVersion()).isEqualTo("21");
+        assertThat(metadata.compilerArgs()).containsExactly("--enable-preview", "-Xlint:preview");
+    }
+
+    @Test
+    void extractsLegacyMavenCompilerArgumentText() {
+        var fixturePath = Path.of("src", "test", "resources", "fixtures", "maven-java21-preview-legacy");
+
+        var metadata = new MavenProjectInspector().inspect(fixturePath);
+
+        assertThat(metadata.compilerArgs()).containsExactly("--enable-preview", "-Xlint:preview");
+    }
+
+    @Test
+    void extractsCompilerArgsFromVisibleMavenCompilerPluginExecution() {
+        var fixturePath = Path.of("src", "test", "resources", "fixtures", "maven-java21-preview-execution");
+
+        var metadata = new MavenProjectInspector().inspect(fixturePath);
+
+        assertThat(metadata.compilerArgs()).containsExactly("--enable-preview");
+    }
+
+    @Test
     void rejectsPathsWithoutAPomXmlFile() {
         var missingPath = Path.of("src", "test", "resources", "fixtures", "missing-pom");
 
